--- a/Нейрон.md
+++ b/Нейрон.md
@@ -5,6 +5,8 @@ Tags: #
 # Title
 - Каждый нейрон состоит из одного аксона, тела (перикариона) и N-кол-во дендритов, в зависимости от числа которых нервные клетки делятся. Аксоны дают коллатерали (утолщаются).
 - Тонкие аксоны расходуют меньше энергии и метаболических веществ для проведения потенциала действия, но толстые аксоны позволяют проводить его быстрее.
+- При диаметре в несколько микронов длина аксона может достигать у крупных животных 1 метра и более (например, аксоны, идущие от нейронов спинного мозга в конечности). У многих беспозвоночных (кальмаров, кольчатых червей, форонид, ракообразных) встречаются гигантские аксоны толщиной в сотни мкм (у кальмаров — до 2—3 мм)
+![[Pasted image 20230930203937.png]]
 - 1 нейрон может иметь до 20тыс. связей с другими нейронами.
 - Более быстро и менее энергозатратно, нейроны могут использовать для покрытия аксонов специальные [[Нейроглия. Глия|глиальные клетки]].
 - Передача нервного импульса происходит от дендритов (или от тела клетки) к аксону
