--- a/Психосоматика.md
+++ b/Психосоматика.md
@@ -2,6 +2,7 @@
 Tags: #
 
 - Я молодец! Во всех своих ошибках и успехах, обыденности и радости, решениях и бездействие. Я молодец! 
+- Если ты не любишь себя, то и окружению этого не почувствует. Любовь надо взрастить. 
 ---
 - Психика решает на какой орган повлияет тот или иной конфликт, стрессовая ситуация.
 - Событие это одно реакция тела это другое. Каждый по разному реагирует на событие. 
@@ -55,6 +56,8 @@ Tags: #
 
 Если разрешится дерьмовая ситуация, то заболит толстый кишечник, появится слизь или кровь в стуле, кишечные колики, могут поставить любой диагноз, связанный с толстым кишечником: рак, дивертикулит, неспецифический язвенный колит, синдром раздраженного кишечника и т. п
 
+Старая мезодерма реагирует на конфликт «Защита от атаки». В КАФ идет процесс роста клеток для усиления защиты и ничего не болит. В ПКФ появляются симптомы, боль, воспаление, начинается разрушение
+кандидами и туберкулезными палочками, а также ночные потения
 
 ### Как понять?:
 Самоанализы, психологи, психотерапевты
@@ -81,7 +84,47 @@ Tags: #
 3. **Принятие**. У страха глаза велики. Далее нам приходится признать, что мы больны и иметь с этим дело...  Ко всему этому добавляются переживания на тему болезни. Иногда она бывает больше, чем первая. К этому пункту относятся различные переживания из общения с врачами и больницами, необходимость делать какие-то процедуры, госпитализация, страхи от прогнозов. А чего можно начитаться в интернете? Поэтому в момент болезни и выздоровления так важно бережное и спокойное отношение к себе, больше аналитики работа с психологами [[КПТ|метод КПТ позволяет избегать расстройства вызванные нелогичными или нецелесообразными мыслями и убеждениями человека]]
 4. Вторичная выгода.  Это то выгодное состояние, которое дает болезнь. Да, сама болезнь страдание. Но тогда муж/дети  обратят внимание, станут заботиться. Тогда не придется идти в школу/ на работу и терпеть агрессивного начальника. Очень ярко это проявляется в болезни детей (тогда мы работаем со стрессами мамы, они отражаются на ребенке, примерно до 7-9 лет). Какая я буду мама, если ребенок болеет? Я мобилизуюсь, буду хорошей мамой, упорной. Посмотрите, какая я внимательная и старательная, мне сочувствуют. Это проявляется на бессознательном уровне. Эти чувства бывает трудно признавать, за ними могут также скрываться довольно болезненные истории.
 
+
+
+
+### Энтодерма — «Кусковые конфликты»
+### Старая мезодерма — «Конфликты защиты от атаки»
+
+# Новая мезодерма — «Конфликты самообесценивания» (КСО)
+- Мышцы
+- Хрящи, связки
+- Суставы
+- Кости
+- Костный мозг и все клетки крови
+- Кровеносные сосуды, кроме коронарных (в сердце)
+- Лимфатические сосуды; Лимфатические узлы
+- Подкожная жировая клетчатка
+- Яичники у женщин
+- Яички у мужчин
+- Паренхима почек (часть, которая фильтрует кровь)
+- Дентин (ткань внутри зуба)
+- Оболочки нервов
+- Белое вещество головного мозга
+- Кора надпочечников.
+`Как энтодерма реагировала на кусковые конфликты, как старая мезодерма реагировала на защиту от атаки, так и новая мезодерма реагировала на свой тип конфликтов: «могу/не могу», «справлюсь/не справлюсь», «убежал/не убежал» и т. д.`
+- У человека все те же самые реакции органов новой мезодермы реагируют на конфликт самообесценивания (КСО). Это ситуации, когда человек сомневается в своих силах, не уверен, что сможет, недоволен собой, своим телом. Не доволен, не нравится, не уверен, не справляешься — природа отправляет таких под списание, ткани начинают разрушаться, а функция слабеет.
+
+- Здесь же клетки начинают разрушаться, при этом ничего не болит, как правило, симптомов нет, кроме ситуаций, когда разрушение настолько сильное, что это становится заметно или мешает физически. В КАФ разрушение не болит, в ПКФ же, наоборот, растет, болит, ремонтируется. Все клетки, разрушенные в КАФ, должны отремонтироваться, и организм на всякий случай наращивает их чуть больше, чем было раньше, чтобы в будущем было проще переживать подобные конфликты.
+- Шишки и узлы на венах, распухшие лимфоузлы, жировики, костные мозоли и остеофиты, гипертрофия мышц у спортсменов, повышение количества клеток крови, кисты яичников, яичек, почек — все это ПКФ самообесценивания. После успешного завершения ПКФ орган или его часть, участвовавшая в процессе, будет чуть сильнее и больше, чем раньше, чтобы в будущем успешнее справляться с возникающими трудностями.
+
+`Органы и ткани новой мезодермы реагируют на конфликты самообесценивания. В КАФ идет распад и разрушение клеток, симптомов может не быть. В ПКФ начинается рост и ремонт клеток, появляются воспаление, боль, отеки, опухоли.`
+
+`Пока человек собой недоволен, пока он себя ругает и испытывает чувство вины, пока он само обесценивает себя целиком или какие-то конкретные части тела, он находится в активной фазе конфликта, клетки и ткани разрушаются, их становится меньше. `
+
+Могут появиться такие диагнозы, как анемия, рассеянный склероз (исчезновение клеток миелиновой оболочки нервов), физическая слабость или паралич мышц, остеопороз, аневризмы, грыжи белой линии живота, пупочные грыжи, диастаз после родов, истончение хрящевой ткани в суставах, уменьшение количества яйцеклеток и сперматозоидов, плохое кровоснабжение органа, исчезновение ткани десен, выпадение зубов, переломы, разрывы, привычные вывихи, общая тотальная слабость из-за истончения коры надпочечников. Все это КАФ КСО.
+
+После того как самообесценивание прекращается, самооценка человека повышается, он перестает себя ругать, или кто-то перестает его ругать. Начинается вторая фаза — ПКФ. В ней все наоборот. Разрушившиеся ранее клетки начинают ремонтироваться. Начинаются воспаление, отек, боль, отекание, увеличение, укрепление, наращивание. Человеку ставят разные диагнозы. В третьем листке, как и в первых двух, симптомы появляются в ПКФ, когда конфликт уже разрешен, и всех этих людей лечат от фазы выздоровления, мешая ей, тормозя ее и препятствуя естественному природному течению событий.
+
+Как обычный человек, который всего этого не знает, реагирует на то, что он проснулся утром, и у него распухло колено, скрутило шею, прострелило поясницу или распухли лимфоузлы? Похвалит он себя за это или поругает? Конечно, поругает. И, тем самым, попадет в типичную ловушку, в которую попадают 99,9 % людей. Они ругают себя и недовольны собой. 
+
 # Решение:
+
+Чем подробнее и эмоциональнее человек расскажет о конфликте, тем лучше.
 `Конфликт считается разрешенным тогда, когда он БОЛЬШЕ НЕ МОЖЕТ ПОВТОРИТЬСЯ. Если есть хотя бы 0,1 % вероятность повторения конфликта, психика не отпустит ситуацию, и тело не сможет стабильно перейти в ПКФ (в фазу выздоровления), оно так и будет прыгать туда-сюда из первой фазы во вторую и назад. Это называется «зависший конфликт».`
 1. Всегда, всеми силами и средствами нужно полностью, на 110 % разрешать конфликт
 2. Нужно полностью один или несколько раз максимально эмоционально проговорить свою ситуацию с кем-то, кто готов слушать. Нужно выговорить ее из себя, это снижает эмоциональный заряд внутри, изолированность, драматичность.
@@ -93,6 +136,46 @@ Tags: #
 - Проработать событие убрать влияние или нейтрализовать влияние этого события.
 - Иногда просто найти причину и современем мозг самнайдет решение, главное этого не избегать часто психика боится еще больше навредить и пытается этого избегать. Например аллергия.
 - Что-то запрещается, но что-то хочется сделать и создает внутреннее напряжение и приложить все усилия что бы выйти из конфликта.
+
+## ТЕХНИКА ВЫПИСЫВАНИЯ
+Она очень простая и доступна каждому, обладает высокой эффективностью и помогает облегчить состояние при любой, даже самой тяжелой утрате. Главное — постоянство и искренность. Делать каждый день до тех пор, пока не надоест и эмоций внутри уже не останется. Суть техники в следующем. Когда никто не побеспокоит и не помешает процессу, берете лист бумаги и начинаете писать чувства к ушедшему человеку. Сначала пишите все трагическое — `грусть, тоска, сожаление, горечь, боль.` Когда мысли закончатся, сразу начинаете писать следующий блок эмоций и мыслей — `злость, негодование, претензии к человеку`. Потом следующий блок — `благодарность за приятные проведенные вместе моменты.` Потом следующий блок — `объективные, конкретные причины, почему все случилось именно так.` После того как вы выпишете в одну сессию все четыре блока эмоций, сколько бы на это ни ушло бумаги, времени и слез, всю исписанную бумагу нужно скомкать и сразу сжечь, можно прямо в ванне или в железной миске, пепел смыть водой. И так делать каждый день до тех пор, пока не надоест и пока эмоции не закончатся. Кому-то хватает 10 раз, кому-то 20, кому-то больше. 
+- «Этот конфликт может повториться?» От ответа зависит многое. Конфликт считается полностью разрешенным тогда, когда он больше не может повториться.
+-  «Это больше не может повториться, потому что…» И дальше важно уточнить, для мозга, чтобы мозг услышал и понял — почему это не может больше повториться. Например, конфликт Красной Шапочки будет рецидивировать до тех пор, пока она ходит в лес. Если есть хотя бы теоретическая вероятность, хотя бы 0,1 % вероятности, для мозга этого уже достаточно, он уже будет знать на подсознательном уровне, что конфликт может повториться.
+`Если конфликт разрешен, то нужно спросить, может ли он повториться. Если нет, то нужно проговорить причину — почему не может. А если да, то сделать так, чтобы больше не мог повториться.
+
+### Есть три варианта решения конфликта 
+— решить конфликт радикально, уйти от конфликта, изменить отношение к конфликту.
+1. Радикальное решение — это какое-то действие, которое полностью останавливает развитие ситуации прямо сейчас и делает невозможным ее повторение по тем или иным причинам. Например, источник проблемы Вася, от Васи можно избавиться несколькими способами, важно, чтобы Васи физически не стало рядом. Нет Васи — нет проблемы. Нет предмета — нет проблемы. Нет человека — нет проблемы. Нет работы — нет проблемы.
+2. Уйти от конфликта — это физическое дистанцирование от ситуации, чтобы она не могла повториться по причине расстояния между человеком и источником проблемы. Красная Шапочка собирает чемодан и уезжает из родной деревни куда-то, подальше от Васи, туда, где он точно не сможет ее найти. В случае со скрипящей дверью — уйти жить в другую комнату, где не слышно, или переехать на новую квартиру, в обоих случаях гастрит и изжога прекратятся, если только на новой квартире тоже не будет скрипеть дверь. В случае с игрушками — расселить детей по разным комнатам или разграничить территорию внутри комнаты, где чья граница, и чтобы без разрешения никто границу не нарушал. Развестись, уйти, уехать, поменять место жительства, уйти с работы, не контактировать с токсичными людьми и родственниками, заблокировать всех агрессоров в телефоне — все это способы решения конфликта, за счет ухода от него.
+3. Изменить отношение к ситуации — сложный вариант, ведь нужно сделать так, чтобы в случае повторения конфликта в организме не возникало никаких эмоций и ответной реакции. С эволюционной точки зрения это самый полезный для развития индивидуума способ, но в реальной жизни про него лучше забыть вообще.
+4. Бывают такие ситуации, когда человек не разрешает конфликт по тем или иным причинам. Не хватает решимости совершить радикальное действие, например, снять скрипящую дверь или заменить капающий кран. Не хватает решимости уйти от конфликта, например, спать в спальнике на балконе, чтобы хотя бы это не слышать. Тогда нужно любыми силами снижать драматизм и изолированность конфликта. Нужно обсуждать с человеком ситуацию и продумывать различные варианты и сценарии развития событий. Этот же способ подходит для разрешения конфликта неопределенности (он может давать гастрит, изжогу или геморрой), так как сама суть этого конфликта — неуверенность в правильности принятого решения или невозможность принять решение. Нужно брать лист бумаги и прямо по пунктам прописывать все возможные сценарии развития событий до самого конца. Нужно, чтобы мозг увидел, что есть конкретный план действий при любом развитии событий и в конце любого из сценариев нет ничего смертельного и физически опасного. Нужно показать мозгу, что ситуация не приведет к тому, что человек умрет от голода, холода, нехватки денег.
+5. разотождествиться с треком
+# Эктодерма — «Конфликты разлуки». «Территориальные конфликты»
+- Это наружный листок, из которого сформировались различные особо чувствительные наружные ткани. Можно представить себе червяка, который отрастил руки и ноги и теперь, в конце своего эволюционного пути, начал отращивать глаза, слизистые оболочки, эпидермис, волосы, а имеющийся головной мозг покрылся корой — серым веществом. Все это для того, чтобы сделать индивидуума более искусным охотником и добытчиком
+`Любые диагнозы эпидермиса и слизистых — это конфликт разлуки`
+
+Есть в эктодерме ткани, которые реагируют не так, как все остальные, они реагируют по-другому, обратному принципу — в КАФ они распадаются и сразу дают боль или гиперчувствительность, а в ПКФ, наоборот, ремонтируются, и боль исчезает.
+- слизистая ротовой полости, губ, языка;
+- эмаль зубов;
+- слизистая головки пениса и клитора;
+- надкостница.
+`Территория — это не только и не столько недвижимость и земля. Это еще и люди и вещи, которые человек считает своими. Непосредственно само тело человека и его личное пространство — это тоже его территория.`
+
+- Если агрессор нарушил границы, оказался уже на самой территории и ведет там какую-то деятельность, которая злит и раздражает человека, то это новый конфликт — конфликт территориальной агрессии или конфликт территориальной злости.
+
+` На этот конфликт реагируют всеми любимые слизистые оболочки: слизистая малой кривизны желудка (гастрит, язва), двенадцатиперстной кишки (дуоденит, язва), протоков поджелудочной железы (панкреатит), желчных протоков и желчного пузыря (холецистит, дискинезия, камни, полипы). Здесь есть важное отличие от всего, что мы разбирали раньше. Все эти слизистые дают симптомы и боль в активной фазе конфликта, а не в фазе выздоровления. Таких исключений немного, их нужно просто запомнить.`
+
+- Гастрит, холецистит, панкреатит и дуоденит — это не последствия встречи с медведем, а сам момент встречи. То есть человек находится в стрессовой ситуации, ее нужно найти и решить, просто ждать и отдыхать не вариант, нужно думать и действовать. В КАФ происходят распад и боль, в ПКФ боль проходит, слизистая быстро заживает, в ЭК изжога, тошнота, рвота, понос, печеночная колика. 
+
+### конфликт неопределенности
+что делать с агрессором — бить, убегать или притвориться мертвым. Это
+следующий территориальный конфликт — конфликт неопределенности — невозможность принять решение или неуверенность в правильности принятого решения
+### конфликт сексуальной фрустрации
+ На потерю территории, партнера, любимого человека, дома или еще чего-то или кого-то очень ценного женщина реагирует фрустрацией. Конфликт так и называ ется — конфликт сексуальной фрустрации
+ 
+ `Причиной диабета является конфликт борьбы и сопротивления. В КАФ сахар повышается, в ПКФ нормализуется.`
+
+
 
 
 ---
